Avoid horizontal scrolling due to overwide header (especially on mobile/small windows)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,7 @@
 body {
     font: 200 18px/1.61em 'Open Sans', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
     color: #444;
+    overflow-x: hidden;
 }
 
 a {
